fix image overflow

--- a/src/assets/styles/components/hero.scss
+++ b/src/assets/styles/components/hero.scss
@@ -11,11 +11,13 @@
 .hero__details {
   background: $COLOR_DARK;
   width: 100vw;
+  max-width: 100%;
 }
 
 .hero__image {
   height: inherit;
   width: inherit;
+  max-width: 100%;
 }
 
 .hero__details {
